--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGO_URL="mongodb+srv://saireddygundeti902:Reddysai9090@cluster0.gbgm1bz.mongodb.net/?retryWrites=true&w=majority"
-SECRET_KEY="gundetisaireddyfromsvnitlivesinpadkal"
+MONGO_URL=""
+SECRET_KEY=""
